--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>DSMovie</title>
 </head>
 <body>
-    <h1>Página Home</h1>
-    <a href="vendas.html">Voltar para página de vendas</a>
+    <h1>Olá DSMovie!</h1>
+    <h3>Promoções</h3>
+    <h3>Agenda de filmes</h3>
+
 </body>
 </html>
