--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DSMovie</title>
 </head>
+<link rel="stylesheet" href="css/style.css">
 <body>
     <h1>Olá DSMovie!</h1>
     <h3>Promoções</h3>
