--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 </head>
 <link rel="stylesheet" href="css/style.css">
 <body>
-    <h1>Olá DSMovie!</h1>
-    <h3>Promoções</h3>
-    <h3>Agenda de filmes</h3>
+   <header>
+<nav class="container">
+    <h1>DSMovie</h1>
+    <a href="https://github.com/devsuperior">/devsuperiors</a>
+
+</nav>
+   </header>
 
 </body>
 </html>
