--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
    <header>
 <nav class="container">
     <h1>DSMovie</h1>
+   <div class="dsmovie-contact-container">
+    <img src="img/github.svg " alt="GitHub";
     <a href="https://github.com/devsuperior">/devsuperiors</a>
+   </div>
 
 </nav>
    </header>
