--- a/index.html
+++ b/index.html
@@ -1,151 +1,166 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DSMovie</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<head>
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>DSMovie</title>
+
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <link rel="stylesheet" href="css/style.css">
+
 <body>
    <header>
-<nav class="container">
-    <h1>DSMovie</h1>
-   <div class="dsmovie-contact-container">
-    <img src="img/github.svg " alt="GitHub";
-    <a href="https://github.com/devsuperior">/devsuperiors</a>
-   </div>
+      <nav class="container">
+         <h1>DSMovie</h1>
+         <div class="dsmovie-contact-container">
+            <img src="img/github.svg " alt="GitHub" ; <a href="https://github.com/devsuperior">/devsuperiors</a>
+         </div>
 
-</nav>
+      </nav>
    </header>
-<main>
-  
-<section id="dsmovie-card-list" class="container">
+   <main>
 
-   <div class="row">
+      <section id="dsmovie-card-list" class="container">
 
-      <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-         <div class="dsmovie-card">
-            <img src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="the-witcher">
-         <div class="dsmovie-card-description">
-            <h3>The Witcher</h3>
-            <a class= "dsmovie-btn" href="form.html">Avaliar</a>
-         </div>
-         </div>
-      </div>
+         <div class="row">
 
-      <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-         <div class="dsmovie-card">
-            <img src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/uro2Khv7JxlzXtLb8tCIbRhkb9E.jpg" alt="the-witcher">
-         <div class="dsmovie-card-description">
-            <h3>The Walking Dead</h3>
-            <a class= "dsmovie-btn" href="form.html">Avaliar</a>
-         </div>
-         </div>
-      </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+               <div class="dsmovie-card">
+                  <img src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg"
+                     alt="the-witcher">
+                  <div class="dsmovie-card-description">
+                     <h3>The Witcher</h3>
+                     <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                  </div>
+               </div>
+            </div>
 
-      <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-         <div class="dsmovie-card">
-            <img src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/gFZriCkpJYsApPZEF3jhxL4yLzG.jpg" alt="the-witcher">
-         <div class="dsmovie-card-description">
-            <h3>La Casa de Papel</h3>
-            <a class= "dsmovie-btn" href="form.html">Avaliar</a>
-         </div>
-         </div>
-      </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+               <div class="dsmovie-card">
+                  <img src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/uro2Khv7JxlzXtLb8tCIbRhkb9E.jpg"
+                     alt="the-witcher">
+                  <div class="dsmovie-card-description">
+                     <h3>The Walking Dead</h3>
+                     <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                  </div>
+               </div>
+            </div>
 
-      <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-         <div class="dsmovie-card">
-            <img src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/vamhMTvh9m9zFHDoR0v1nRtf6T4.jpg" alt="the-witcher">
-         <div class="dsmovie-card-description">
-            <h3>Homem-Aranha: Longe de Casa</h3>
-            <a class= "dsmovie-btn" href="form.html">Avaliar</a>
-         </div>
-         </div>
-      </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+               <div class="dsmovie-card">
+                  <img src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/gFZriCkpJYsApPZEF3jhxL4yLzG.jpg"
+                     alt="the-witcher">
+                  <div class="dsmovie-card-description">
+                     <h3>La Casa de Papel</h3>
+                     <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                  </div>
+               </div>
+            </div>
 
-      <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-         <div class="dsmovie-card">
-            <img src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/ejgC2lEmuGXiP0A1LvwNezUjNmt.jpg" alt="the-witcher">
-         <div class="dsmovie-card-description">
-            <h3>Moonfall - Ameaça Lunar</h3>
-            <a class= "dsmovie-btn" href="form.html">Avaliar</a>
+            <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+               <div class="dsmovie-card">
+                  <img src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/vamhMTvh9m9zFHDoR0v1nRtf6T4.jpg"
+                     alt="the-witcher">
+                  <div class="dsmovie-card-description">
+                     <h3>Homem-Aranha: Longe de Casa</h3>
+                     <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                  </div>
+               </div>
+            </div>
+
+            <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+               <div class="dsmovie-card">
+                  <img src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/ejgC2lEmuGXiP0A1LvwNezUjNmt.jpg"
+                     alt="the-witcher">
+                  <div class="dsmovie-card-description">
+                     <h3>Moonfall - Ameaça Lunar</h3>
+                     <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                  </div>
+               </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+               <div class="dsmovie-card">
+                  <img src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/5P8SmMzSNYikXpxil6BYzJ16611.jpg"
+                     alt="the-witcher">
+                  <div class="dsmovie-card-description">
+                     <h3>Batman</h3>
+                     <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                  </div>
+               </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+               <div class="dsmovie-card">
+                  <img src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/j5PI0DHzMf8MaCwmMYBlGKwUocf.jpg"
+                     alt="the-witcher">
+                  <div class="dsmovie-card-description">
+                     <h3>Jurassic World: Domínio</h3>
+                     <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                  </div>
+               </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+               <div class="dsmovie-card">
+                  <img src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/bwYhIvGPh81gLRTx3gWnU0Ho6nc.jpg"
+                     alt="the-witcher">
+                  <div class="dsmovie-card-description">
+                     <h3>Superbad: É Hoje</h3>
+                     <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                  </div>
+               </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+               <div class="dsmovie-card">
+                  <img src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/5vAv4h4vugleYsbsNkUb9kcrk8h.jpg"
+                     alt="the-witcher">
+                  <div class="dsmovie-card-description">
+                     <h3>Projeto X: Uma Festa Fora de Controle</h3>
+                     <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                  </div>
+               </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+               <div class="dsmovie-card">
+                  <img src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/xJHokMbljvjADYdit5fK5VQsXEG.jpg"
+                     alt="the-witcher">
+                  <div class="dsmovie-card-description">
+                     <h3>Interestelar</h3>
+                     <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                  </div>
+               </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+               <div class="dsmovie-card">
+                  <img src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/JyjTs9ay06vs2IDUwYrIQ5w53P.jpg"
+                     alt="the-witcher">
+                  <div class="dsmovie-card-description">
+                     <h3>Música, Amigos e Festa</h3>
+                     <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                  </div>
+               </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+               <div class="dsmovie-card">
+                  <img src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/lhVVIWKR13khBvjFz8XyZ2GM0JS.jpg"
+                     alt="the-witcher">
+                  <div class="dsmovie-card-description">
+                     <h3>Eu sou a Lenda</h3>
+                     <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                  </div>
+               </div>
+            </div>
          </div>
-         </div>
-      </div>
-      <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-         <div class="dsmovie-card">
-            <img src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/5P8SmMzSNYikXpxil6BYzJ16611.jpg" alt="the-witcher">
-         <div class="dsmovie-card-description">
-            <h3>Batman</h3>
-            <a class= "dsmovie-btn" href="form.html">Avaliar</a>
-         </div>
-         </div>
-      </div>
-      <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-         <div class="dsmovie-card">
-            <img src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/j5PI0DHzMf8MaCwmMYBlGKwUocf.jpg" alt="the-witcher">
-         <div class="dsmovie-card-description">
-            <h3>Jurassic World: Domínio</h3>
-            <a class= "dsmovie-btn" href="form.html">Avaliar</a>
-         </div>
-         </div>
-      </div>
-      <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-         <div class="dsmovie-card">
-            <img src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/bwYhIvGPh81gLRTx3gWnU0Ho6nc.jpg" alt="the-witcher">
-         <div class="dsmovie-card-description">
-            <h3>Superbad: É Hoje</h3>
-            <a class= "dsmovie-btn" href="form.html">Avaliar</a>
-         </div>
-         </div>
-      </div>
-      <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-         <div class="dsmovie-card">
-            <img src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/5vAv4h4vugleYsbsNkUb9kcrk8h.jpg" alt="the-witcher">
-         <div class="dsmovie-card-description">
-            <h3>Projeto X: Uma Festa Fora de Controle</h3>
-            <a class= "dsmovie-btn" href="form.html">Avaliar</a>
-         </div>
-         </div>
-      </div>
-      <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-         <div class="dsmovie-card">
-            <img src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/xJHokMbljvjADYdit5fK5VQsXEG.jpg" alt="the-witcher">
-         <div class="dsmovie-card-description">
-            <h3>Interestelar</h3>
-            <a class= "dsmovie-btn" href="form.html">Avaliar</a>
-         </div>
-         </div>
-      </div>
-      <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-         <div class="dsmovie-card">
-            <img src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/JyjTs9ay06vs2IDUwYrIQ5w53P.jpg" alt="the-witcher">
-         <div class="dsmovie-card-description">
-            <h3>Música, Amigos e Festa</h3>
-            <a class= "dsmovie-btn" href="form.html">Avaliar</a>
-         </div>
-         </div>
-      </div>
-      <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-         <div class="dsmovie-card">
-            <img src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/lhVVIWKR13khBvjFz8XyZ2GM0JS.jpg" alt="the-witcher">
-         <div class="dsmovie-card-description">
-            <h3>Eu sou a Lenda</h3>
-            <a class= "dsmovie-btn" href="form.html">Avaliar</a>
-         </div>
-         </div>
-      </div>  
-   </div>
 
 
 
-</section>
+      </section>
 
 
 
-</main>
+   </main>
 </body>
+
 </html>
