Polimento da listagem

--- a/index.html
+++ b/index.html
@@ -46,10 +46,6 @@
                         </div>
                         <p>10 avaliações</p>
                         <a class="dsmovie-btn" href="form.html">Avaliar</a>
-
-
-
-
                      </div>
                   </div>
                </div>
@@ -58,10 +54,21 @@
             <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                <div class="dsmovie-card">
                   <img src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/uro2Khv7JxlzXtLb8tCIbRhkb9E.jpg"
-                     alt="the-witcher">
+                     alt="the-walking-dead">
                   <div class="dsmovie-card-description">
                      <h3>The Walking Dead</h3>
-                     <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                     <div class="dsmovie-card-description-bottom">
+                        <h4>3.8</h4>
+                        <div>
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-half.svg" alt="Star">
+                           <img src="img/star-empty.svg" alt="Star">
+                        </div>
+                        <p>10 avaliações</p>
+                        <a class="dsmovie-btn" href="form2.html">Avaliar</a>
+                     </div>
                   </div>
                </div>
             </div>
@@ -72,7 +79,18 @@
                      alt="the-witcher">
                   <div class="dsmovie-card-description">
                      <h3>La Casa de Papel</h3>
-                     <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                     <div class="dsmovie-card-description-bottom">
+                        <h4>3.8</h4>
+                        <div>
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-half.svg" alt="Star">
+                           <img src="img/star-empty.svg" alt="Star">
+                        </div>
+                        <p>10 avaliações</p>
+                        <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                     </div>
                   </div>
                </div>
             </div>
@@ -83,7 +101,18 @@
                      alt="the-witcher">
                   <div class="dsmovie-card-description">
                      <h3>Homem-Aranha: Longe de Casa</h3>
-                     <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                     <div class="dsmovie-card-description-bottom">
+                        <h4>3.8</h4>
+                        <div>
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-half.svg" alt="Star">
+                           <img src="img/star-empty.svg" alt="Star">
+                        </div>
+                        <p>10 avaliações</p>
+                        <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                     </div>
                   </div>
                </div>
             </div>
@@ -94,7 +123,18 @@
                      alt="the-witcher">
                   <div class="dsmovie-card-description">
                      <h3>Moonfall - Ameaça Lunar</h3>
-                     <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                     <div class="dsmovie-card-description-bottom">
+                        <h4>3.8</h4>
+                        <div>
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-half.svg" alt="Star">
+                           <img src="img/star-empty.svg" alt="Star">
+                        </div>
+                        <p>10 avaliações</p>
+                        <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                     </div>
                   </div>
                </div>
             </div>
@@ -104,7 +144,18 @@
                      alt="the-witcher">
                   <div class="dsmovie-card-description">
                      <h3>Batman</h3>
-                     <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                     <div class="dsmovie-card-description-bottom">
+                        <h4>3.8</h4>
+                        <div>
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-half.svg" alt="Star">
+                           <img src="img/star-empty.svg" alt="Star">
+                        </div>
+                        <p>10 avaliações</p>
+                        <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                     </div>
                   </div>
                </div>
             </div>
@@ -114,7 +165,18 @@
                      alt="the-witcher">
                   <div class="dsmovie-card-description">
                      <h3>Jurassic World: Domínio</h3>
-                     <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                     <div class="dsmovie-card-description-bottom">
+                        <h4>3.8</h4>
+                        <div>
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-half.svg" alt="Star">
+                           <img src="img/star-empty.svg" alt="Star">
+                        </div>
+                        <p>10 avaliações</p>
+                        <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                     </div>
                   </div>
                </div>
             </div>
@@ -124,7 +186,18 @@
                      alt="the-witcher">
                   <div class="dsmovie-card-description">
                      <h3>Superbad: É Hoje</h3>
-                     <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                     <div class="dsmovie-card-description-bottom">
+                        <h4>3.8</h4>
+                        <div>
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-half.svg" alt="Star">
+                           <img src="img/star-empty.svg" alt="Star">
+                        </div>
+                        <p>10 avaliações</p>
+                        <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                     </div>
                   </div>
                </div>
             </div>
@@ -134,7 +207,18 @@
                      alt="the-witcher">
                   <div class="dsmovie-card-description">
                      <h3>Projeto X: Uma Festa Fora de Controle</h3>
-                     <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                     <div class="dsmovie-card-description-bottom">
+                        <h4>3.8</h4>
+                        <div>
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-half.svg" alt="Star">
+                           <img src="img/star-empty.svg" alt="Star">
+                        </div>
+                        <p>10 avaliações</p>
+                        <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                     </div>
                   </div>
                </div>
             </div>
@@ -144,7 +228,18 @@
                      alt="the-witcher">
                   <div class="dsmovie-card-description">
                      <h3>Interestelar</h3>
-                     <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                     <div class="dsmovie-card-description-bottom">
+                        <h4>3.8</h4>
+                        <div>
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-half.svg" alt="Star">
+                           <img src="img/star-empty.svg" alt="Star">
+                        </div>
+                        <p>10 avaliações</p>
+                        <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                     </div>
                   </div>
                </div>
             </div>
@@ -154,7 +249,18 @@
                      alt="the-witcher">
                   <div class="dsmovie-card-description">
                      <h3>Música, Amigos e Festa</h3>
-                     <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                     <div class="dsmovie-card-description-bottom">
+                        <h4>3.8</h4>
+                        <div>
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-half.svg" alt="Star">
+                           <img src="img/star-empty.svg" alt="Star">
+                        </div>
+                        <p>10 avaliações</p>
+                        <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                     </div>
                   </div>
                </div>
             </div>
@@ -164,7 +270,18 @@
                      alt="the-witcher">
                   <div class="dsmovie-card-description">
                      <h3>Eu sou a Lenda</h3>
-                     <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                     <div class="dsmovie-card-description-bottom">
+                        <h4>3.8</h4>
+                        <div>
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-full.svg" alt="Star">
+                           <img src="img/star-half.svg" alt="Star">
+                           <img src="img/star-empty.svg" alt="Star">
+                        </div>
+                        <p>10 avaliações</p>
+                        <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                     </div>
                   </div>
                </div>
             </div>
