--- a/index.html
+++ b/index.html
@@ -25,6 +25,20 @@
    <main>
 
       <section id="dsmovie-card-list" class="container">
+         <div class="dsmovie-pagination-container">
+            <div class="dsmovie-pagination-box">
+               <button disabled>
+                  <img src="img/arrow.svg" alt="Voltar">
+               </button>
+               <p>
+                  1 de 23
+               </p>
+               <button>
+                  <img class= "sdmovie-flip-horizontal" src="img/arrow.svg" alt="Proxima">
+               </button>
+
+            </div>
+         </div>
 
          <div class="row">
 
@@ -34,7 +48,7 @@
                      alt="the-witcher">
                   <div class="dsmovie-card-description">
                      <h3>The Witcher</h3>
-                     
+
                      <div class="dsmovie-card-description-bottom">
                         <h4>3.8</h4>
                         <div>
@@ -67,7 +81,7 @@
                            <img src="img/star-empty.svg" alt="Star">
                         </div>
                         <p>10 avaliações</p>
-                        <a class="dsmovie-btn" href="form2.html">Avaliar</a>
+                        <a class="dsmovie-btn" href="form.html">Avaliar</a>
                      </div>
                   </div>
                </div>
