--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="./CSS/main.css">
 
 <body>
    <header>
       <nav class="container">
          <h1>DSMovie</h1>
          <div class="dsmovie-contact-container">
-            <img src="img/github.svg " alt="GitHub" ; <a href="https://github.com/devsuperior">/devsuperiors</a>
+            <img src="img/github.svg " alt="GitHub" ; 
+            <a llink href="https://github.com/devsuperior">/devsuperiors</a>
          </div>
 
       </nav>
